--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,19 @@
 {
+  "name": "backend",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
     "http": "^0.0.1-security",
+    "morgan": "^1.10.1",
     "socket.io": "^4.8.1"
   }
 }
