--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express-rate-limit": "^8.0.1",
     "http": "^0.0.1-security",
     "morgan": "^1.10.1",
+    "nodemon": "^3.1.11",
     "socket.io": "^4.8.1"
   }
 }
